# busat

./: .gitignore  AGENT.md  CLAUDE.md  README.md  pyproject.toml
src/busat/: __init__.py  __main__.py  cli.py  encoder.py  model.py  parser.py  solver.py
tests/: test_busat.py  test_encoder.py  test_integration.py  test_parser.py
tests/fixtures/: bus_and_mem_sat.bus  mem_sat.bus  mem_unsat.bus  multi_bus.bus  no_constraints.bus  no_defs.bus  simple_sat.bus  simple_unsat.bus
